# django-rest-jwt-registration

./: .env.template  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
core/: models.py
core/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_auto_20210313_1314.py
demo/: settings.py  urls.py
django_rest_jwt_registration/: __init__.py  apps.py  decorators.py  exceptions.py  managers.py  models.py  scheduler.py  serializers.py  token.py  urls.py  utils.py  views.py
django_rest_jwt_registration/migrations/: 0001_initial.py  0002_auto_20210412_2103.py  0002_token_type.py
django_rest_jwt_registration/templates/: drjr_email_change_email_confirm.html  drjr_email_change_password.html  drjr_email_registration.html  drjr_email_registration_confirm.html  drjr_email_registration_delete.html  drjr_email_registration_delete_confirm.html  drjr_email_reset_password.html  drjr_email_reset_password_confirm.html  drjr_registration_confirm.html  drjr_registration_delete_confirm.html  drjr_reset_password_confirm.html
drjr/: __init__.py  admin.py  apps.py  decorators.py  models.py  serializers.py  token.py  urls.py  utils.py  views.py
drjr/migrations/: 0001_initial.py  0002_auto_20210412_2103.py  0003_token_token.py
drjr/templates/: drjr_base.html  drjr_email_registration.html  drjr_email_registration_delete_confirm.html  drjr_email_reset_password.html  drjr_registration_confirm.html
drjr/templates/drjr/: drjr_email_change_email.html  drjr_email_registration_confirm.html
example/: docker-compose.yml  requirements.txt
example/core/migrations/: 0001_initial.py  0003_alter_user_id.py
example/templates/: drjr_email_change_password.html  drjr_email_reset_password.html
examples/drjr-demo/: .env.template  Dockerfile  requirements.txt
examples/drjr-demo/core/: serializers.py
examples/drjr-demo/demo/: settings.py
templates/: drjr_email_change_email.html  drjr_email_change_password.html  drjr_email_registration.html  drjr_email_registration_confirm.html  drjr_email_registration_delete.html  drjr_email_registration_delete_confirm.html  drjr_email_reset_password.html  drjr_email_reset_password_confirm.html  drjr_registration_confirm.html  drjr_registration_delete_confirm.html  drjr_reset_password_confirm.html
(+1 files in other folders)
