[metadata]
name = django-rest-jwt-registration
version = 0.1.0
description = A Django app for registration, password reset, email - and password change with JWT tokens and automatic email sending
long_description = file: README.md
long_description_content_type = text/markdown
author = János Gönye,
author_email = janos.gonye@gmail.com
url = https://github.com/janos-gonye/django-rest-jwt-registration
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django
    djangorestframework
    pyjwt
